2020-04-12  John Darrington <john@darrington.wattle.id.au>

	* doc/poke.texi:  Don't capitalise or indent "Where ..."

2020-04-12  John Darrington <john@darrington.wattle.id.au>

	* src/pk-set.c (set_completion_function): Fix bug which was
	exposed by recent test: tab-completion-subcommand-1.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp (tab-completion-subcommand-1): Use
	poke_send instead of poke_test_cmd.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke.exp (poke_exit): Make sure to discard any
	previous input before issuing the `exit' command.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Writing REPL tests): Mention poke_send.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke.exp (poke_send): New proc.
	* testsuite/poke.repl/repl.exp (tab-completion-2): New test.
	* HACKING (Command REPL tests): New subsection.
	(General REPL tests): Likewise.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke.exp (poke_test_cmd): Fail and return if poke
	has been killed.
	(poke_killed): New global.
	(poke_exit): Reset poke_killed whenever appropriate.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp (tab-completion-subcommand-1): New
	test

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp: Rewrite tests to be more
	self-contained, and add some notes.
	* HACKING (Writing REPL tests): Updated.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Writing REPL tests): New section.

2020-04-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.repl/repl.exp (tab-completion-1): New test.

2020-04-10  Tim Rühsen  <tim.ruehsen@gmx.de>

	* lib/pkl.c (pkl_new): Return NULL instead of calling exit.
	* lib/pkl.h (pkl_new): Add function description.

2020-04-11  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/Makefile.am (.pks.pkc): Cause make to stop with an error if
	ras fails.
